yeti: fixes navbar-text alignment, closes #550

--- a/yeti/_bootswatch.scss
+++ b/yeti/_bootswatch.scss
@@ -36,6 +36,11 @@ $web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400
     }
   }
 
+  &-text {
+    margin: 12px 15px;
+    line-height: 21px;
+  }
+
   .dropdown {
 
     &-menu {
