--- a/yeti/bootstrap.css
+++ b/yeti/bootstrap.css
@@ -6783,6 +6783,10 @@ button.close {
   height: auto;
   padding: 4px 6px;
 }
+.navbar-text {
+  margin: 12px 15px;
+  line-height: 21px;
+}
 .navbar .dropdown-menu {
   border: none;
 }
