--- a/yeti/bootswatch.less
+++ b/yeti/bootswatch.less
@@ -40,6 +40,11 @@
     }
   }
 
+  &-text {
+    margin: 12px 15px;
+    line-height: 21px;
+  }
+
   .dropdown {
 
     &-menu {
